--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "@next/third-parties": "^14.1.3",
     "axios": "^1.6.8",
     "lottie-react": "^2.4.0",
-    "next": "^14.1.3",
-    "react": "latest",
-    "react-dom": "latest",
+    "next": "^14.2.6",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.2",
     "react-google-recaptcha": "^3.1.0",
     "react-icons": "^4.11.0",
@@ -25,7 +25,7 @@
   "devDependencies": {
     "autoprefixer": "latest",
     "eslint": "latest",
-    "eslint-config-next": "latest",
+    "eslint-config-next": "^14.2.6",
     "postcss": "latest",
     "sass": "^1.69.5",
     "tailwindcss": "latest"
